src/main/java/com/example/NYA_calculation/error/RecordNotFoundException.java
package com.example.NYA_calculation.error;

public class RecordNotFoundException extends RuntimeException {
    public RecordNotFoundException(String message) {
        super(message);
    }
}
